This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

24/01/2007
namespace
- Added Undo/Redo-Toolbarbuttons (Shaderman)
- Fixed Bug #1078 (sogined)

18/01/2007
namespace
- Weird shiftvalues are now hidden to the user, shiftvalues will
  stay in ]-shader_size;shader_size[ range for display.
  For the sake of floatingpoint precision, it would be nice
  to keep the internal values in that range too, but thats "nice to have".
- Fixed missing librarypaths in ufoai-plugin
  
18/01/2007
LordHavoc
- disabled SnapPlane because it slightly corrupts collision brushes from
  embedded model triangles

17/01/2007
namespace
- Fixed "jumping" texcoords when switching to a shader with different size
- (Todo) Toolbar: add button for refresh-models. (Shaderman)
- Aniso fix (Shaderman)
- Translucency fix (Shaderman)

05/01/2007
namespace
- UFO:Alien Invasion Plugin (mattn2)
- Fix: Filtering models in ET doesn't filter misc_gamemodels (Shaderman)

25/12/2006
namespace
 - Brushplugin Version 2.0, supports multiple collapse modes and a materialignore list (namespace)
 - Camera movement speed changes. Increase speed = SHIFT+KP_PLUS, decrease speed = SHIFT+KP_MINUS.
   New option to link the strafe speed to camera movement speed (default: linked). (Shaderman)
 - Fixed bug in sample plugin (Shaderman)
 - Merry Christmas

17/12/2006
namespace
 - Radiant warzow-support (Topsun + Warzow-Mappers)

15/12/2006
namespace
 - Inverted bevel can be used with end caps (Topsun)
 - Removed needless .pdb files from win32 installer (Topsun)
 - Fixed .ase picomodel loader to load shaders again (Shaderman)
 - Removed translucent brushes fix because of wrong rendering behaviour on Linux
 - New cool(!) radiant icon by eb

13/12/2006
namespace
- Added tremoulus-support to q3map2

08/12/2006
namespace
- Entity names are now drawn for group entities in Doom3 and Quake 3 mode (namespace)